--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 #root {
     text-align: center;
-    background-image: url(jumarianobf/challenge-react/src/assets/Captura de tela 2024-03-18 212350.png);
+    background-image: url("jumarianobf/challenge-react/src/assets/Captura de tela 2024-03-18 212350.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
