--- a/src/Pages/FormularioUsuario /style.css
+++ b/src/Pages/FormularioUsuario /style.css
@@ -12,3 +12,29 @@
 
 
 }
+.form-image {
+    width: 300rem;
+    height: 70vh;
+    display: flex;
+    flex: 1;
+
+    padding: rem;
+}
+
+.form-image img{
+    width: 50rem;
+
+}
+
+
+.form {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffffff00;
+
+    padding: 20px;
+    margin-right: 40rem ;
+}
