--- a/src/Pages/FormularioUsuario /style.css
+++ b/src/Pages/FormularioUsuario /style.css
@@ -88,3 +88,32 @@
 .input-box input:hover {
     background-color: #0c3e8075;
 }
+
+.continue-button button {
+    width: 50%;
+    margin-top: 0.1rem;
+    border: none;
+    background-color: #6387ff;
+    padding: 0.62rem;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 0.93rem;
+    font-weight: 500;
+    color: #fff;
+}
+.continue-button button:hover {
+    background-color: #6b63fff1;
+}
+
+label{
+    font-size: 0.81rem;
+    font-weight: 600;
+    color: #000000c0;
+
+}
+
+.texto{
+    margin-right: 150px;
+
+}
